deploy/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-test-project-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - my-test-project.services.pai-world.com
      secretName: my-test-project-api-cert
  rules:
    - host: my-test-project.services.pai-world.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: my-test-project-api-svc
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-test-project-frontend-svc
                port:
                  number: 80
